Send DPR client hint on main frame requests

Compute DPR in the browser process and include it as a
client hint (if the origin requested it) on main
frame requests.

Bug: 821954
Change-Id: I73a2017d426cb6d9403d41bc89e3107da44034b2
Reviewed-on: https://chromium-review.googlesource.com/963315
Reviewed-by: Ryan Sturm <ryansturm@chromium.org>
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543209}
Former-commit-id: b30b7532ac821911fdffeff467cbd139f5b5226d